Modify home page.

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
           </p>
           <h3>Contact Information</h3>
           <p>
-            Email: achlopec@purdue.edu
+            <b>Email:</b> achlopec@purdue.edu
             <br>
-            Address: Mathematical Sciences Building, 150 N. University Street, Office 1047, West Lafayette, IN
+            <b>Address:</b> Mathematical Sciences Building, 150 N. University Street, Office 1047, West Lafayette, IN
           </p>
           <h3>
             <a href="https://drive.google.com/file/d/1pCiDXdORzIutda_As4-h6gJO7VdKJVtJ/view?usp=sharing" target="_blank">
