--- a/MA_26500_Spring_2026/MA26500spring2026.html
+++ b/MA_26500_Spring_2026/MA26500spring2026.html
@@ -117,7 +117,7 @@
       <h3>Instructor Information</h3>
         <p>
         Anna Natalie Chlopecki <br>
-        achlopec@purdue.edu <br>
+        <b>Email:</b> achlopec@purdue.edu <br>
         <!-- <b>Office:</b> MATH 1047 <br> -->
         <b>Office Hours:</b> TBD <br>
         <b>Feasting with Faculty:</b> Mondays at 12-1pm in Meredith Hall
