--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -117,7 +117,7 @@
       <h3>Instructor Information</h3>
         <p>
         Anna Natalie Chlopecki <br>
-        achlopec@purdue.edu <br>
+        <b>Email:</b> achlopec@purdue.edu <br>
         <!-- <b>Office:</b> MATH 1047 <br> -->
         <b>Office Hours:</b> Tuesdays at 12:30-1:30pm in LILY 1-407 or by appointment <br>
         <b>Feasting with Faculty:</b> Mondays at 12-1pm in Meredith Hall
