Add office hours for MA 26500.

--- a/MA_26500_Spring_2026/MA26500spring2026.html
+++ b/MA_26500_Spring_2026/MA26500spring2026.html
@@ -119,7 +119,7 @@
         Anna Natalie Chlopecki <br>
         <b>Email:</b> achlopec@purdue.edu <br>
         <!-- <b>Office:</b> MATH 1047 <br> -->
-        <b>Office Hours:</b> TBD <br>
+        <b>Office Hours:</b> Tuesdays at 11am-12:20pm in MATH 1047 <br>
         <b>Feasting with Faculty:</b> Mondays at 12-1pm in Meredith Hall
         </p>
     </div>
