--- a/MA_26500_Spring_2026/MA26500spring2026.html
+++ b/MA_26500_Spring_2026/MA26500spring2026.html
@@ -120,7 +120,7 @@
         <b>Email:</b> achlopec@purdue.edu <br>
         <!-- <b>Office:</b> MATH 1047 <br> -->
         <b>Office Hours:</b> Tuesdays at 11am-12:20pm in MATH 1047 or by appointment<br>
-        <b>Feasting with Faculty:</b> Mondays at 12-1pm in Meredith Hall
+        <b>Feasting with Faculty Program:</b> Mondays at 12-1pm in Meredith Hall
         </p>
     </div>
 
