--- a/MA_26500_Spring_2026/MA26500spring2026.html
+++ b/MA_26500_Spring_2026/MA26500spring2026.html
@@ -62,7 +62,7 @@
         text-align: center;
       }
 
-      .handwritten_text {
+      .typed_text {
         width: 22.5%;
         text-align: center;
       }
@@ -125,17 +125,17 @@
     </div>
 
     <div id="Main Page" class="notes_container">
-        <div class="handwritten_text">
-          <h3>Handwritten Notes</h3>
+        <div class="typed_text">
+          <h3>Typed Notes</h3>
             <p>
-              <!-- <a href="Handwritten_Notes/lesson1_handwritten_notes.pdf" target="_blank">Lesson 1</a> <br> -->
+              <a href="Typed_Notes/lecture18_typed_notes.pdf" target="_blank">Lecture 18</a>
             </p>
         </div>
 
         <div class="accessible_text">
           <h3>Accessible Notes</h3>
             <p>
-              <!-- <a href="Accessible_Notes/lesson1_accessible_notes.html" target="_blank">Lesson 1</a> <br> -->
+              <!-- <a href="Accessible_Notes/lecture18_accessible_notes.html" target="_blank">Lecture 18</a> <br> -->
             </p>
         </div>
     </div>
