--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
             In 2020, I graduated from the University of Illinois at Urbana-Champaign with a BS in Mathematics and a minor in Criminology, Law, and Society.
             My research interests are rooted in combinatorial commutative algebra and computational algebraic geometry. 
             I am advised by <a href="https://www.math.purdue.edu/~walther/" target="_blank">Uli Walther</a> and <a href="https://www.math.purdue.edu/~esampert/" target="_blank">Eric Samperton</a>.
-            In my free time, I enjoy playing tennis, as well as running.
+            In my free time, I enjoy playing tennis and reading. 
+            <i>I will be on the job market starting in the fall of 2026.</i>
           </p>
           <h3>Contact Information</h3>
           <p>
