--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <b>Address:</b> Mathematical Sciences Building, 150 N. University Street, Office 1047, West Lafayette, IN
           </p>
           <h3>
-            <a href="https://drive.google.com/file/d/1pCiDXdORzIutda_As4-h6gJO7VdKJVtJ/view?usp=sharing" target="_blank">
+            <a href="Chlopecki_CV.pdf" target="_blank">
               Curriculum Vitae
             </a>
           </h3>
