Add lesson 19 handwritten notes.

--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -153,7 +153,8 @@
               <a href="Handwritten_Notes/lesson15_handwritten_notes.pdf" target="_blank">Lesson 15</a> <br>
               <a href="Handwritten_Notes/lesson16_handwritten_notes.pdf" target="_blank">Lesson 16</a> <br>
               <a href="Handwritten_Notes/lesson17_handwritten_notes.pdf" target="_blank">Lesson 17</a> <br>
-              <a href="Handwritten_Notes/lesson18_handwritten_notes.pdf" target="_blank">Lesson 18</a>
+              <a href="Handwritten_Notes/lesson18_handwritten_notes.pdf" target="_blank">Lesson 18</a> <br>
+              <a href="Handwritten_Notes/lesson19_handwritten_notes.pdf" target="_blank">Lesson 19</a>
             </p>
         </div>
 
