Add lecture 19 typed notes.

--- a/MA_26500_Spring_2026/MA26500spring2026.html
+++ b/MA_26500_Spring_2026/MA26500spring2026.html
@@ -128,7 +128,8 @@
         <div class="typed_text">
           <h3>Typed Notes</h3>
             <p>
-              <a href="Typed_Notes/lecture18_typed_notes.pdf" target="_blank">Lecture 18</a>
+              <a href="Typed_Notes/lecture18_typed_notes.pdf" target="_blank">Lecture 18</a> <br>
+              <a href="Typed_Notes/lecture19_typed_notes.pdf" target="_blank">Lecture 19</a>
             </p>
         </div>
 
