Added lecture 18 accessible notes.

--- a/MA_26500_Spring_2026/MA26500spring2026.html
+++ b/MA_26500_Spring_2026/MA26500spring2026.html
@@ -136,7 +136,7 @@
         <div class="accessible_text">
           <h3>Accessible Notes</h3>
             <p>
-              <!-- <a href="Accessible_Notes/lecture18_accessible_notes.html" target="_blank">Lecture 18</a> <br> -->
+              <a href="Accessible_Notes/lecture18_accessible_notes.html" target="_blank">Lecture 18</a>
             </p>
         </div>
     </div>
